test issue 3200
Signed-off-by: Samir Romdhani <samir.romdhani_externe@rte-france.com>